Change some URIs from show to example.
Took 1 hour 29 minutes